# GEM_simulations

./: CMakeLists.txt  README.txt  base.sif.template  cria_multiplas_simus.py  exec_simu_auto.py  gemconfig.yaml  geometria.py  job.sh  libgeo.py  submit_multiple_simu.sh  utils.py
3DGEMs/: CMakeLists.txt  README.txt  base.sif.template  exec_simu_auto.py  gem3D.C  gemconfig.yaml  geometria.py  job.sh  submit_multiple_simu.sh  utils.py
